--- a/src/bitmessageqt/settings.ui
+++ b/src/bitmessageqt/settings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>521</width>
-    <height>413</height>
+    <width>568</width>
+    <height>453</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -213,46 +213,20 @@
        <string>Network Settings</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_4">
-       <item row="0" column="0">
-        <widget class="QGroupBox" name="groupBox">
-         <property name="title">
-          <string>Listening port</string>
-         </property>
-         <layout class="QGridLayout" name="gridLayout_3">
-          <item row="0" column="0">
-           <spacer name="horizontalSpacer">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>125</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="0" column="1">
-           <widget class="QLabel" name="label">
-            <property name="text">
-             <string>Listen for connections on port:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="2">
-           <widget class="QLineEdit" name="lineEditTCPPort">
-            <property name="maximumSize">
-             <size>
-              <width>70</width>
-              <height>16777215</height>
-             </size>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
        <item row="2" column="0">
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="0" column="0">
         <widget class="QGroupBox" name="groupBox_3">
          <property name="title">
           <string>Bandwidth limit</string>
@@ -323,118 +297,18 @@
        <item row="1" column="0">
         <widget class="QGroupBox" name="groupBox_2">
          <property name="title">
-          <string>Proxy server / Tor</string>
+          <string>I2P Destination</string>
          </property>
-         <layout class="QGridLayout" name="gridLayout_2">
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_2">
-            <property name="text">
-             <string>Type:</string>
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <item>
+           <widget class="QPlainTextEdit" name="plainTextEdit">
+            <property name="readOnly">
+             <bool>true</bool>
             </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QLabel" name="label_3">
-            <property name="text">
-             <string>Server hostname:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="2" colspan="2">
-           <widget class="QLineEdit" name="lineEditSocksHostname"/>
-          </item>
-          <item row="1" column="4">
-           <widget class="QLabel" name="label_4">
-            <property name="text">
-             <string>Port:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="5">
-           <widget class="QLineEdit" name="lineEditSocksPort"/>
-          </item>
-          <item row="2" column="1">
-           <widget class="QCheckBox" name="checkBoxAuthentication">
-            <property name="text">
-             <string>Authentication</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="2">
-           <widget class="QLabel" name="label_5">
-            <property name="text">
-             <string>Username:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="3">
-           <widget class="QLineEdit" name="lineEditSocksUsername">
-            <property name="enabled">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="4">
-           <widget class="QLabel" name="label_6">
-            <property name="text">
-             <string>Pass:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="5">
-           <widget class="QLineEdit" name="lineEditSocksPassword">
-            <property name="enabled">
-             <bool>false</bool>
-            </property>
-            <property name="inputMethodHints">
-             <set>Qt::ImhHiddenText|Qt::ImhNoAutoUppercase|Qt::ImhNoPredictiveText</set>
-            </property>
-            <property name="echoMode">
-             <enum>QLineEdit::Password</enum>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="1" colspan="4">
-           <widget class="QCheckBox" name="checkBoxSocksListen">
-            <property name="text">
-             <string>Listen for incoming connections when using proxy</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="QComboBox" name="comboBoxProxyType">
-            <item>
-             <property name="text">
-              <string>none</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>SOCKS4a</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>SOCKS5</string>
-             </property>
-            </item>
            </widget>
           </item>
          </layout>
         </widget>
-       </item>
-       <item row="3" column="0">
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </widget>
@@ -1000,14 +874,6 @@
   <tabstop>checkBoxStartOnLogon</tabstop>
   <tabstop>checkBoxStartInTray</tabstop>
   <tabstop>checkBoxMinimizeToTray</tabstop>
-  <tabstop>lineEditTCPPort</tabstop>
-  <tabstop>comboBoxProxyType</tabstop>
-  <tabstop>lineEditSocksHostname</tabstop>
-  <tabstop>lineEditSocksPort</tabstop>
-  <tabstop>checkBoxAuthentication</tabstop>
-  <tabstop>lineEditSocksUsername</tabstop>
-  <tabstop>lineEditSocksPassword</tabstop>
-  <tabstop>checkBoxSocksListen</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources>
@@ -1043,38 +909,6 @@
     <hint type="destinationlabel">
      <x>286</x>
      <y>274</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>checkBoxAuthentication</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>lineEditSocksUsername</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>125</x>
-     <y>190</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>233</x>
-     <y>189</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>checkBoxAuthentication</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>lineEditSocksPassword</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>79</x>
-     <y>190</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>370</x>
-     <y>192</y>
     </hint>
    </hints>
   </connection>
